--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -58,7 +58,7 @@ and $x,y,z \in \Re^n$. \autoref{fig:benchmarkAD} shows how time spent calculatin
 \end{figure}
 In \autoref{fig:benchmarkAllADs} we have four different graphs. The analytic graph is simply the evaluation the analytic functions $f(x,y,z)$, $f_x$, $f_y$ and $f_z$. ForwardDiff is the AD package in Julia, MRST is the AD tool implemented in MATLAB and ForwardAutoDiff is the AD tool I have implemented in Julia. The first thing you observe is that ForwardDiff scales very badly as n becomes large. This is because it creates and works with the full Jacobian matrix as discussed in \autoref{sec:Julia}. For $f(x,y,z)$ this will be a $3n \times 3n$ matrix which is a matrix with more than 3 billion elements for the largest values of $n$. We can also observe that for small vectors, MRST and ForwardAutoDiff have much more overhead than ForwardDiff and the analytic solution and hence are slower, but as $n$ grows, this overhead becomes more negligible. 
 
-The computational costs of both MRST and ForwardAutoDiff approach the analytic evaluation as $n$ grows, and it is thus interesting to see how they scale for even larger $n$. This can be seen in \autoref{fig:benchmarkLongVectors}. Here, ForwardDiff is left out since it becomes too slow, but I have added a new implementation from MRST that is specially optimized for element operations like we have when evaluating the function in \eqref{eq:benchmarkFunction}. This implementation actually becomes just as fast as the analytic evaluation in Julia for vectors of length $\approx 10^7$. As said, this method is specially efficient on functions like in \eqref{eq:benchmarkFunction}, but if we for example want to calculate something like
+The computational costs of both MRST and ForwardAutoDiff approach the analytic evaluation as $n$ grows, and it is thus interesting to see how they scale for even larger $n$. This can be seen in \autoref{fig:benchmarkLongVectors}. Here, ForwardDiff is left out since it becomes too slow, but I have added a new implementation \todo{Flere detaljer. Se kommentar.} from MRST that is specially optimized for element operations like we have when evaluating the function in \eqref{eq:benchmarkFunction}. This implementation actually becomes just as fast as the analytic evaluation in Julia for vectors of length $\approx 10^7$. As said, this method is specially efficient on functions like in \eqref{eq:benchmarkFunction}, but if we for example want to calculate something like
 \begin{equation}
 g(x) = x\left[2:\text{end}\right] - x\left[1:\text{end}-1\right],
 \label{eq:differenceFunction}
@@ -169,7 +169,7 @@ Now, we have all the ingredients to set up the governing equations for the flow 
 Here, $k$ is the permeability that we have saved in the \texttt{rock} variable and $\mu$ is the viscosity of the oil.
 The corresponding discrete equation that we call \text{flux} is given by 
 \lstinputlisting{code/flux.jl}
-Here, T is the transmissibilities that contain $k$ and the properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. \todo{Skjønner ikke hva denne gjør og hvorfor den er der. Sett inn senere.}... When \texttt{flux} is defined, we define the continuity equation in the continuous case
+Here, T is the transmissibilities that contain $k$ and the properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. When \texttt{flux} is defined, we define the continuity equation in the continuous case
 \begin{equation*}
     \frac{\partial}{\partial t}(\phi\rho)(p) + \nabla\cdot(\rho\vec{v}) = q.
 \end{equation*}
@@ -211,13 +211,13 @@ As explained in \autoref{sec:ApplicationsAD}, the different types of AD mentione
 The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in spatial direction $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[htb]
     \centering
-    \caption{Table indicating}
+    \caption{Table with speed benchmarks of different AD methods solving the "Single-Phase Compressible AD Solver" for different discretizations.}
     \label{tab:FlowSolverSpeedTest}
-    \begin{tabular}{c{0.4\textwidth}ccc}
+    \begin{tabular}{cccc}
     \textbf{Number of cells} & \textbf{ForwardDiff} & \textbf{ForwardAutoDiff} & \textbf{MRST}\\ \hline
-         10\times10\times10 & 71.5s & 2.3s & 1.9s \\  
-         20\times20\times20 & ~ & 31.9s & 23.4s \\ 
-         30\times30\times30 & ~ & 188.8s & 147.8s\\ \hline
+         $10\times10\times10$ & 71.5s & 2.3s & 1.9s \\  
+         $20\times20\times20$ & ~ & 31.9s & 23.4s \\ 
+         $30\times30\times30$ & ~ & 188.8s & 147.8s\\ \hline
     \end{tabular}
 \end{table}
 For 10 cells in each spatial direction it is clear that what we assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true. The ForwardDiff method takes much longer time than ForwardAutoDiff and MRST. Since ForwardDiff already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \autoref{tab:FlowSolverSpeedTest} shows that the trend with MRST being a bit faster than ForwardAutoDiff continues for finer discretizations. 
