--- a/frontmatter/frontpage.tex
+++ b/frontmatter/frontpage.tex
@@ -21,7 +21,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.7cm]
-{ \huge \bfseries Title}\\[0.4cm] % Title of your document
+{ \huge \bfseries Automatic Differentiation in Julia}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
  
 %An Operations Research Approach to Multi-plant Manganese~Alloy Production Planning
